# rust-1b-row-challenge

./: .gitignore  Cargo.toml  README.md
src/: challenge.rs  generate.rs
